[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Cart.gd" type="Script" id=1]
[ext_resource path="res://racing assets/Cart.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/ChararcterCustomisation/CustomDecals/hearts.material" type="Material" id=3]
[ext_resource path="res://racing assets/AF_Wheel.obj" type="ArrayMesh" id=4]
[ext_resource path="res://SFX/engine_sound.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/ChararcterCustomisation/CustomMaterials/Evil.material" type="Material" id=6]
[ext_resource path="res://SFX/checkpoint.ogg" type="AudioStream" id=7]
[ext_resource path="res://textures/star_emoji.material" type="Material" id=8]
[ext_resource path="res://SFX/horn.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]

resource_name = "checkpoint"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CheckpointParticles/ThoughtBubble:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CheckpointParticles/ThoughtBubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.25, 0.25, 0.25 ), Vector3( 0.25, 0.25, 0.25 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CheckpointParticles/AudioStreamPlayer3D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CylinderMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="PlaneMesh" id=3]

material = ExtResource( 3 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector2( 24, 14 )
subdivide_width = 5
subdivide_depth = 5

[sub_resource type="BoxShape" id=4]

margin = 0.04
extents = Vector3( 0.221525, 0.174357, 0.377656 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = true
flag_rotate_y = true
flag_disable_z = false
spread = 30.0
flatness = 1.0
gravity = Vector3( 0, 5, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 1.0
scale = 0.5
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Flags", "Gravity", "Initial Velocity", "Resource" ]

[sub_resource type="SphereMesh" id=6]

lightmap_size_hint = Vector2( 1, 1 )
material = ExtResource( 6 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
radius = 0.12
height = 0.25
radial_segments = 64
rings = 32
is_hemisphere = false

[sub_resource type="PlaneMesh" id=7]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[node name="Cart" type="VehicleBody" groups=[
"players",
]]
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 2
collision_mask = 3
mode = 0
mass = 50.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = true
sleeping = false
can_sleep = false
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
engine_force = 0.0
brake = 0.0
steering = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Axis Lock", "Collision", "Motion" ]
path = null
player_id = 1
MAX_ENGINE_FORCE = 50
MAX_BRAKE_FORCE = 5.0
MAX_STEER_ANGLE = 0.5
steer_speed = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/checkpoint = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.0115564, 0 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
_sections_unfolded = [ "Geometry", "Transform", "material", "mesh" ]

[node name="FlagPole" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.01, 0, 0, 0, 0.125, 0, 0, 0, 0.01, 0.555238, 0.267974, -0.288659 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Flag" type="SoftBody" parent="MeshInstance/FlagPole"]
transform = Transform( -4.3688e-08, -12.5, 0, -4.3688e-08, 2.38835e-14, 0.086418, -0.999466, 5.46391e-07, -3.77745e-09, 0, 0.396102, -12.2653 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = null
collision_layer = 0
collision_mask = 0
parent_collision_ignore = NodePath("")
simulation_precision = 5
total_mass = 1.0
linear_stiffness = 0.13
areaAngular_stiffness = 0.13
volume_stiffness = 0.13
pressure_coefficient = 0.0
damping_coefficient = 0.01
drag_coefficient = 0.0
pose_matching_coefficient = 0.0
pinned_points = [ 12, 13, 20, 27, 34, 41, 48 ]
attachments/0/point_index = 12
attachments/0/spatial_attachment_path = NodePath("..")
attachments/0/offset = Vector3( 3.49504e-07, 0.799386, -4.26957 )
attachments/1/point_index = 13
attachments/1/spatial_attachment_path = NodePath("..")
attachments/1/offset = Vector3( 5.24256e-07, 0.799387, -0.271708 )
attachments/2/point_index = 20
attachments/2/spatial_attachment_path = NodePath("..")
attachments/2/offset = Vector3( 5.24256e-07, 0.597744, -0.271708 )
attachments/3/point_index = 27
attachments/3/spatial_attachment_path = NodePath("..")
attachments/3/offset = Vector3( 5.24256e-07, 0.396102, -0.271708 )
attachments/4/point_index = 34
attachments/4/spatial_attachment_path = NodePath("..")
attachments/4/offset = Vector3( 5.24256e-07, 0.19446, -0.271708 )
attachments/5/point_index = 41
attachments/5/spatial_attachment_path = NodePath("..")
attachments/5/offset = Vector3( 5.24256e-07, -0.00718156, -0.271708 )
attachments/6/point_index = 48
attachments/6/spatial_attachment_path = NodePath("..")
attachments/6/offset = Vector3( 5.24256e-07, -0.208824, -0.271708 )
_sections_unfolded = [ "Collision", "Geometry", "attachments/0", "attachments/1", "attachments/2", "attachments/3", "attachments/4", "attachments/5", "attachments/6", "material", "mesh", "pinned_points" ]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.194924, -0.0349127 )
shape = SubResource( 4 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="WheelFrontLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.148481, 0.0779323, 0.17 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.1
wheel_radius = 0.1
wheel_rest_length = 0.023
wheel_friction_slip = 1.0
suspension_travel = 0.05
suspension_stiffness = 500.0
suspension_max_force = 175.0
damping_compression = 1.0
damping_relaxation = 1.5
_sections_unfolded = [ "Damping", "Suspension", "Transform", "Wheel" ]

[node name="Tire" type="MeshInstance" parent="WheelFrontLeft"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.116091, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
_sections_unfolded = [ "Transform" ]

[node name="WheelFrontRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.222, 0.0779323, 0.172765 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.1
wheel_radius = 0.1
wheel_rest_length = 0.023
wheel_friction_slip = 1.0
suspension_travel = 0.5
suspension_stiffness = 500.0
suspension_max_force = 175.0
damping_compression = 1.0
damping_relaxation = 1.5
_sections_unfolded = [ "Suspension", "Transform", "Wheel" ]

[node name="Tire" type="MeshInstance" parent="WheelFrontRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.111389, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
_sections_unfolded = [ "Transform" ]

[node name="WheelRearRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.222391, 0.0779323, -0.244815 )
use_as_traction = true
use_as_steering = false
wheel_roll_influence = 0.1
wheel_radius = 0.1
wheel_rest_length = 0.023
wheel_friction_slip = 1.25
suspension_travel = 0.5
suspension_stiffness = 500.0
suspension_max_force = 175.0
damping_compression = 1.0
damping_relaxation = 1.5
_sections_unfolded = [ "Transform", "Wheel" ]

[node name="Tire" type="MeshInstance" parent="WheelRearRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.111389, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
_sections_unfolded = [ "Transform" ]

[node name="WheelRearLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.148481, 0.0779323, -0.250988 )
use_as_traction = true
use_as_steering = false
wheel_roll_influence = 0.1
wheel_radius = 0.1
wheel_rest_length = 0.023
wheel_friction_slip = 1.5
suspension_travel = 0.5
suspension_stiffness = 500.0
suspension_max_force = 175.0
damping_compression = 1.0
damping_relaxation = 1.5
_sections_unfolded = [ "Transform", "Wheel" ]

[node name="Tire" type="MeshInstance" parent="WheelRearLeft"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.116091, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
_sections_unfolded = [ "Transform" ]

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
attenuation_model = 0
unit_db = 20.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.25
autoplay = false
stream_paused = false
max_distance = 20.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = true
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -20.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 2
_sections_unfolded = [ "Attenuation Filter", "Doppler", "Emission Angle" ]

[node name="CheckpointParticles" type="Particles" parent="."]
transform = Transform( -1, 7.01632e-08, 8.69062e-14, 8.99731e-14, 4.37114e-08, 1, 7.01632e-08, 1, -4.37114e-08, 0, -0.0475219, -0.37189 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_aabb = AABB( -4, -4, -4, 8, 8, 8 )
local_coords = false
draw_order = 1
process_material = SubResource( 5 )
draw_passes = 1
draw_pass_1 = SubResource( 6 )
_sections_unfolded = [ "Draw Passes", "Process Material", "Time", "Transform", "draw_pass_1" ]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="CheckpointParticles"]
stream = ExtResource( 7 )
attenuation_model = 0
unit_db = 5.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="ThoughtBubble" type="MeshInstance" parent="CheckpointParticles"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.355229, 0.352657, 0.651642 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 7 )
skeleton = NodePath("..")
material/0 = ExtResource( 8 )
_sections_unfolded = [ "Matrix", "Transform", "Visibility", "material" ]

[node name="Horn" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 2
_sections_unfolded = [ "Doppler" ]

